--- a/src/index.css
+++ b/src/index.css
@@ -40,17 +40,17 @@ input, button
 
 #cover
 {
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 0;
     right: 0;
-    width: 550px;
+    width: 650px;
     padding: 35px;
-    margin: -83px auto 0 auto;
+    margin: 100px auto 100px auto;
     background-color: #ff7575;
     border-radius: 20px;
     box-shadow: 0 10px 40px #ff7c7c, 0 0 0 20px #ffffffeb;
-    transform: scale(0.6);
+    /* transform: scale(0.6); */
 }
 
 form
@@ -182,3 +182,4 @@ button span:before, button span:after
   box-shadow: 0 10px 20px -5px rgba(255, 117, 117, 0.86);
   z-index: 125;
 }
+
