--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,53 @@ div#root {
 }
 
 
+.zen_centering{
+    margin: 0 160px;
+    border: 25px solid rgba(255, 117, 117, 0.86);
+    border-radius: 45px;
+    box-shadow: 0 10px 40px #ff7c7c, 0 0 0 20px #ffffffeb;
+    padding: 25px;
+}
+.zen-colors{
+    background-color: #ffffffeb!important;
+    border-radius:12px!important;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    box-shadow: 1px 1px 2px 0 hsl(0deg 0% 39% / 50%)!important;
+    margin-top: 25px!important;
+}
 
+.zen-colors .header, .zen-colors .header p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif!important;
+    font-size: 22px!important;
+}
+.description-style{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif!important;
+    font-size: 18px!important;
+    font-weight:500!important;
+}
+.ui.embed {
+    border-radius: 14px!important;
+    box-shadow: 0 10px 40px #ff7c7c, 0 0 0 10px #ffffffeb;
+    margin-top: 18px!important;
+}
+img.ui.image {
+    border-radius: 14px!important;
+    box-shadow: 0 10px 40px #ff7c7c, 0 0 0 10px #ffffffeb;
+}
+
+.VideoDetail.item {
+    margin: 20px 0!important;
+    border-top: none!important;
+}
+
+.zen-texting .header{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif!important;
+    font-size: 16px!important;
+    font-weight:600!important;
+    padding:4px 11px!important;
+}
+
+.nine.wide.column {
+    margin-left: 16px!important;
+    margin-right: 16px!important;
+}
